--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/mocha": "^5.2.7",
     "javascript-time-ago": "^2.0.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
@@ -15,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tsc:w": "tsc -w"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +35,13 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "@types/node": "^12.7.12",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/react-redux": "^7.1.4",
+    "@types/react-router-dom": "^5.1.0",
+    "prettier": "^1.18.2",
+    "react-redux-typescript-scripts": "^1.6.2",
+    "typescript": "^3.6.4"
   }
 }
